# sudoku_showcase

./: .gitignore  Doxyfile  LICENSE  README.md  Roadmap.md  Sudoku.py  Sudoku.pyw  SudokuModel.py  SudokuSolver.py  UIModel.py  app.py  cli.py  main.py  models.py  pyproject.toml  themes.json  ui.py
docs/: LICENSE.html  README_8md.html  Roadmap_8md.html  ____init_____8py.html  annotated.html  app_8py.html  classes.html  classfield_1_1Field-members.html  classfield_1_1Field.html  classpuzzle_1_1Puzzle-members.html  classpuzzle_1_1Puzzle.html  classstate_1_1State-members.html  classstate_1_1State.html  classsudoku_1_1app_1_1App-members.html  classsudoku_1_1app_1_1App.html  classsudoku_1_1app_1_1Game-members.html  classsudoku_1_1app_1_1Game.html  classsudoku_1_1cli_1_1CLI-members.html  classsudoku_1_1cli_1_1CLI.html  classsudoku_1_1game_1_1Game-members.html  classsudoku_1_1game_1_1Game.html  classsudoku_1_1models_1_1Field.html  classsudoku_1_1models_1_1Puzzle-members.html  classsudoku_1_1models_1_1Puzzle.html  classsudoku_1_1models_1_1Solver-members.html  classsudoku_1_1models_1_1Solver.html  classsudoku_1_1solver_1_1Solver-members.html  classsudoku_1_1solver_1_1Solver.html  classsudoku_1_1ui_1_1UI-members.html  classsudoku_1_1ui_1_1UI.html  classthemes_1_1HEX-members.html  classthemes_1_1HEX.html  classthemes_1_1RGB-members.html  classthemes_1_1RGB.html  classthemes_1_1Theme.html  cli_8py.html  constants_8py.html  dir_15a57debad274b584f7e9dc8b3f79046.html  dir_a10b6e2d64c9aa8a338bb6a282eebe7a.html  field_8py.html  (+31 more)
tests/: test_field.py  test_models.py  test_puzzle.py  (+1 more)
(+133 files in other folders)
