[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-showcase"
version = "0.1.0"
description = "A modular Sudoku game with solver and GUI"
authors = [
    { name="Janick Joost" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pytest"
]

[project.scripts]
sudoku-cli = "sudoku.cli:main"
sudoku-app = "sudoku.app:main"